2009-06-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (load_image_initialize, load_image_done)
	(avt_import_XPM): don't use SDL_image for embedded XPM-data

2009-06-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	improved support for color names in XPM (only one word names)

2009-06-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_name_to_color): support X11 color names
	avtcolors.h: new file

2009-06-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_background_color_name)
	(avt_set_text_color_name)
	(avt_set_text_background_color_name): new functions
	(avt_name_to_color): new function
	(avt_load_image_xpm): adapted

	* avatarsay.c (handle_backgroundcolor_command)
	(check_config_file): use avt_set_background_color_name

	* avatar.c (avt_draw_balloon): fix calculation of shadow color

2009-06-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	organize XPM code characters in a tree
	(avt_free_xpm_tree): new function

2009-05-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm_RW):
	improve memory handling a further

2009-05-28  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	support for images with more than 256 colors

	* avatar.c (avt_load_image_xpm_RW):
	improve memory handling a little

2009-05-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (calculate_balloonmaxheight)
	(avt_change_avatar_image, avt_initialize):
	avatarsay.c (handle_avatarimage_command):
	fix handling when avatar-image is too large

2009-05-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	support for grayscale images

2009-05-22  Andreas K. Foerster  <info@akfoerster.de>

	* configure, avatar.c (load_image_initialize):
	"./configure --disable-sdl-image"

2009-05-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xpm):
	support up to 256 colors
